--- a/src/apps/static/pages/studio/index.html
+++ b/src/apps/static/pages/studio/index.html
@@ -513,7 +513,7 @@
             </div>
           </a>
 
-          <a class="studio-card__link" href="./math-lab/index.html">
+          <a class="studio-card__link" href="/studio/math-lab">
             <div class="studio-card">
               <div class="studio-card__header">
                 <h3 class="studio-card__title">Psychedelic Math Lab</h3>
@@ -526,7 +526,7 @@
             </div>
           </a>
 
-          <a class="studio-card__link" href="./shape-madness/index.html">
+          <a class="studio-card__link" href="/studio/shape-madness">
             <div class="studio-card">
               <div class="studio-card__header">
                 <h3 class="studio-card__title">Shape Madness</h3>
@@ -539,7 +539,7 @@
             </div>
           </a>
 
-          <a class="studio-card__link" href="/pin-designer/">
+          <a class="studio-card__link" href="/studio/pin-designer">
             <div class="studio-card">
               <div class="studio-card__header">
                 <h3 class="studio-card__title">Pin Designer</h3>
